--- a/software.html
+++ b/software.html
@@ -3,11 +3,11 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Vinay Somawat - Software Development</title>
+      <title>Wable Sanket - Software Development</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+      <meta name="description" content="Portfolio webpage of Wable Sanket" />
       <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
-      <meta name="author" content="Vinay Somawat" />
+      <meta name="author" content="Wable Sanket" />
       <!--quora icon--> 
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,7 +35,7 @@
       <script src="js/modernizr-2.6.2.min.js"></script>
    </head>
    <!--- Github ribbon ----------->
-   <a href="https://github.com/vinaysomawat/vinaysomawat.github.io" class="github-corner" aria-label="View source on GitHub">
+   <a href="https://github.com/Sanketwable/Portfolio" class="github-corner" aria-label="View source on GitHub">
       <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
          <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
          <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
@@ -51,7 +51,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Vinay Somawat</a></h1>
+                  <h1 id="colorlib-logo"><a href="https://sanketwable.github.io/Portfolio/">Wable Sanket</a></h1>
                   <p><strong>Software Developer</strong></p>
                </div>
             </aside>
@@ -65,46 +65,46 @@
                                  <div class="about-desc">
                                     <h2>Software Development</h2>
                                     <hr>
-                                    <h4><a href="https://github.com/vinaysomawat/Pizza-Ordering-ChatBot">Pizza Ordering ChatBot</a></h4>
-                                    <p>ChatBot using Dialogflow, Firebase database which stores the chat data in the realtime database.<br>
-                                       <strong>Technologies Used: </strong>Dailogflow, Firebase
+                                    <h4><a href="https://github.com/Sanketwable/Graphics_Project/">Graphics Editor - with OpenGL/GLUT</a></h4>
+                                    <p>Its a Graphics Editor use to create basic images<br>eg. Circle, Rectangle and is used to fill color to it.<br>All of these is Implemented using basic algorithms from Computer-  Graphics
+                                       <strong><br>Technologies Used: </strong>
+                                       <div class="mb-0">
+                                          <span class='badge badge-secondary'>OpenGL Framework</span>
+                                          <span class='badge badge-secondary'>GLUT Framework</span>
+                                          <span class='badge badge-secondary'>C++ 14</span>
+                                        </div>
                                     </p>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Pizza-Ordering-ChatBot&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Pizza-Ordering-ChatBot&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Pizza-Ordering-ChatBot&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+                                    <iframe src="https://ghbtns.com/github-btn.html?user=Sanketwable&repo=Graphics_Project&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                                    <iframe src="https://ghbtns.com/github-btn.html?user=Sanketwable&repo=Graphics_Project&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                                    <iframe src="https://ghbtns.com/github-btn.html?user=Sanketwable&repo=Graphics_Project&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
                                     <hr>
-                                    <h4><a href="https://github.com/vinaysomawat/WhatsApp-Bot">WhatsApp-Bot</a></h4>
-                                    <p>Python script which helps to send messages to WhatsApp contacts automatically using selenium and web automation.<br>
-                                       <strong>Technologies Used: </strong>Selenium, Chrome webdriver, Python
+                                    <h4><a href="https://github.com/Sanketwable/CLI-Network">Network-CLI</a></h4>
+                                    <p>Golang script for network discovery of Boards <br>through Bluetooth HC-05 or WIFI Esp8266<br>
+                                       <strong>Technologies Used: </strong>
+                                       <div class="mb-0">
+                                          <span class='badge badge-secondary'>Golang</span>
+                                          <span class='badge badge-secondary'>spf13/Cobra</span>
+                                          <span class='badge badge-secondary'>Networking</span>
+                                        </div>
                                     </p>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=WhatsApp-Bot&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=WhatsApp-Bot&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=WhatsApp-Bot&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+                                    <iframe src="https://ghbtns.com/github-btn.html?user=Sanketwable&repo=CLI-Network&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                                    <iframe src="https://ghbtns.com/github-btn.html?user=Sanketwable&repo=CLI-Network&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                                    <iframe src="https://ghbtns.com/github-btn.html?user=Sanketwable&repo=CLI-Network&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
                                     <hr>
-                                    <h4><a href="https://github.com/vinaysomawat/Bill-Generator">Bill Generator</a></h4>
-                                    <p>GUI to transfer data to excel sheets and generate bills on the local shops. <br>
-                                       <strong>Technologies Used: </strong>Tkinter, Openxlpy
+                                    <h4><a href="https://github.com/Sanketwable/BashScripts">Bash Script</a></h4>
+                                    <p>Simple Bash-Script for Git commit,<br> sp self-commands and Cool-look terminal<br>
+                                       <strong>Technologies Used: </strong>
+                                       <div class="mb-0">
+                                          <span class='badge badge-secondary'>Bash</span>
+                                          <span class='badge badge-secondary'>UNIX/MacOs</span>
+                                        </div>
                                     </p>
-                                    <p>Published Article: <a href="https://medium.com/quick-code/cash-memo-bills-generator-for-local-shops-25e56fa0cc3c">How I Build Cash Memo and Bill Generator for Local Shops</a></p>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Bill-Generator&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Bill-Generator&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Bill-Generator&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+                                    <iframe src="https://ghbtns.com/github-btn.html?user=Sanketwable&repo=BashScripts&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                                    <iframe src="https://ghbtns.com/github-btn.html?user=Sanketwable&repo=BashScripts&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                                    <iframe src="https://ghbtns.com/github-btn.html?user=Sanketwable&repo=BashScripts&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
                                     <hr>
-                                    <h4><a href="https://github.com/vinaysomawat/Nodejs-Web-Crawling">Nodejs-Web-Crawling</a></h4>
-                                    <p>By sending HTTP request to a particular URL and then by extracting HTML of that web page for getting useful information is known as crawling or web scraping.<br>
-                                       <strong>Technologies Used: </strong>Nodejs(request, cheerio libraries)
-                                    </p>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Nodejs-Web-Crawling&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Nodejs-Web-Crawling&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Nodejs-Web-Crawling&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
-                                    <hr>
-                                    <h4><a href="https://github.com/vinaysomawat/Calculator-using-tkinter">Calculator GUI</a></h4>
-                                    <p>Calculator GUI for mathematical calculation.<br>
-                                       <strong>Technologies Used: </strong>Tkinter,Python
-                                    </p>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Calculator-using-tkinter&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Calculator-using-tkinter&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-                                    <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=Calculator-using-tkinter&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+                                    
+               
                                  </div>
                               </div>
                            </div>
