--- a/webdev.html
+++ b/webdev.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Wable Sanket - Robotics Projects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+    <meta name="description" content="Portfolio webpage of Wable Sanket" />
     <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
     <meta name="author" content="Wable Sanket" />
     <!--quora icon--> 
@@ -35,7 +35,7 @@
     <script src="js/modernizr-2.6.2.min.js"></script>
   </head>
   <!--- Github ribbon ----------->
-  <a href="https://github.com/vinaysomawat/Portfolio" class="github-corner" aria-label="View source on GitHub">
+  <a href="https://sanketwable.github.io/Portfolio/" class="github-corner" aria-label="View source on GitHub">
     <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
       <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
       <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
@@ -52,7 +52,7 @@
           <div class="text-center">
             <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
             <h1 id="colorlib-logo"><a href="https://sanketwable.github.io/Portfolio/">Wable Sanket</a></h1>
-            <p><strong>Web Developer</strong></p>
+            <p><strong>Robotics Projects</strong></p>
           </div>
         </aside>
         <div id="colorlib-main">
@@ -113,7 +113,7 @@
                               <div
                                 onmouseover="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(3) > div > a > div:nth-child(1)').style.backgroundColor='#78C2AD'"
                                 onmouseout="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(3) > div > a > div:nth-child(1)').style.backgroundColor=''">
-                                <a href="https://github.com/vinaysomawat/DeveloperAtYourDoor" style="text-decoration:none;">
+   <!--                             <a href="https://github.com/vinaysomawat/DeveloperAtYourDoor" style="text-decoration:none;">
                                   <div>
                                     <h4 class="mb-3">DeveloperAtYourDoor</h4>
                                   </div>
@@ -149,8 +149,8 @@
                               </div>
                             </li>
                             <br>
-                            <!-- </article>
-                              <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                             </article>
+                              <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> 
                             <li>
                               <i class="fa-li fa fa-check"></i>
                               <div
@@ -278,6 +278,7 @@
         </div>
       </div>
     </div>
+  -->
     <!-- End #projects -->
     <!-- jQuery -->
     <script src="js/jquery.min.js"></script>
