adding target="_self"

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                            </div>
                            <div class="row">
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="cp.html" >
+                                 <a href="cp.html" target="_self">
                                     <div class="services color-5">
                                        <span class="icon2"><i class="fa fa-desktop"></i></span>
                                        <h3>Programming<br> Profile (CP)</h3>
@@ -102,7 +102,7 @@
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="webdev.html" >
+                                 <a href="webdev.html" target="_self" >
                                     <div class="services color-2">
                                        <span class="icon2"><i class="fa fa-code"></i></span>
                                        <h3>Robotics<br> Projects</h3>
@@ -110,7 +110,7 @@
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="software.html" >
+                                 <a href="software.html" target="_self" >
                                     <div class="services color-3">
                                        <span class="icon2"><i class="fa fa-terminal"></i></span>
                                        <h3>Software Development</h3>
@@ -118,7 +118,7 @@
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="android.html" >
+                                 <a href="android.html" target="_self">
                                     <div class="services color-4">
                                        <span class="icon2"><i class="fa fa-android"></i></span>
                                        <h3>Ethical <br>Hacking</h3>
@@ -126,7 +126,7 @@
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="ml.html" >
+                                 <a href="ml.html" target="_self">
                                     <div class="services color-1">
                                        <span class="icon2"><i class="fa fa-user"></i></span>
                                        <h3>Web Development</h3>
