--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                  <div class="hire">
                                     <h2>I want to make things
                                        that make a difference.</h2>
-                                       <a href="https://doc-0s-1c-docs.googleusercontent.com/docs/securesc/u1evnrf8ui24ji2s6n4i7cm0rn21tism/mkfhj7b3ru6phavgpsds32roumsc9m2u/1585295175000/12879540754091781526/08436503510066928896Z/1xtTk5pl9APkr6UQjJaHi5U5X6RnaGpdW?e=download&nonce=evhg7ijjs2cqk&user=08436503510066928896Z&hash=v5nbsjgthlvl0gbth83ni6oafbdgr32q" class="btn-hire" style="text-align: center;">Download Resume</a>
+                                       <a href="https://drive.google.com/file/d/1xtTk5pl9APkr6UQjJaHi5U5X6RnaGpdW/view?usp=sharing" class="btn-hire" style="text-align: center;">Download Resume</a>
                                  </div>
                               </div>
                            </div>
