--- a/webdev.html
+++ b/webdev.html
@@ -99,6 +99,10 @@
                                           <span class='badge badge-secondary'>Opencv</span>
                                           <span class='badge badge-secondary'>pi cam</span>
                                         </div>
+                                        <br>
+                                        <iframe src="https://ghbtns.com/github-btn.html?user=Sanketwable&repo=ELEC_20_NERO&type=watch&count=true&size=small&v=2" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
+                                        <iframe src="https://ghbtns.com/github-btn.html?user=Sanketwable&repo=ELEC_20_NERO&type=star&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
+                                        <iframe src="https://ghbtns.com/github-btn.html?user=Sanketwable&repo=ELEC_20_NERO&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
                                       </div>
                                     </div>
                                   </div>
@@ -106,9 +110,77 @@
                               </div>
                             </li>
                             <br>
+                            <li>
+                              <i class="fa-li fa fa-check"></i>
+                              <div
+                                onmouseover="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(1) > div > a > div:nth-child(1)').style.backgroundColor='#78C2AD'"
+                                onmouseout="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(1) > div > a > div:nth-child(1)').style.backgroundColor=''">
+                                <a href="https://github.com/Sanketwable/ELEC_20_NERO" style="text-decoration:none;">
+                                  <div>
+                                    <h4 class="mb-3">IARC - Techkriti(IITK)</h4>
+                                  </div>
+                                  <div
+                                    class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+                                    <div id="divMain">
+                                      <div id='left-div' class="resume-content">
+                                        <img style='float:left; margin:0 20px;' width='200px;' class='img-fluid'
+                                          src='images/facebook.png'>
+                                      </div>
+                                      <div id='right-div' class='resume-content'>
+                                        <div class="subheading mb-0">
+                                          <p>IARC - Its actually a BOT which uses IR Sensor to detect the amount of light reflected from the surface and Travels accordingllsy. Bot used to detect the black strip on the ground as IR sensor facedown. And travels on the Black strip. PID calculations were used to insure the smooth traversal of BOT. Several detections were incorporated in code for the competition. Also Rotory Encoder was used for the calcuations. We were qualified for the secound round competiting teams from variuos IITs, NITs, And International Schools</p>
+                                        </div>
+                                        <div class="mb-0">
+                                          <span class='badge badge-secondary'>Arduino Mega</span>
+                                          <span class='badge badge-secondary'>IR Sensor 7 ArraY</span>
+                                          <span class='badge badge-secondary'>ARDUINO</span>
+                                          <span class='badge badge-primary'>600 RPM BO-motors</span>
+                                          <span class='badge badge-primary'>PID</span>
+                                          <span class='badge badge-primary'>Rotary Encoder</span>
+                                         
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </a>
+                              </div>
+                            </li>
+                            <br>
+                            <li>
+                              <i class="fa-li fa fa-check"></i>
+                              <div
+                                onmouseover="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(1) > div > a > div:nth-child(1)').style.backgroundColor='#78C2AD'"
+                                onmouseout="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(1) > div > a > div:nth-child(1)').style.backgroundColor=''">
+                                <a href="https://github.com/Sanketwable/ELEC_20_NERO" style="text-decoration:none;">
+                                  <div>
+                                    <h4 class="mb-3">AirCraft - Aeroboeing workshop(IITK)</h4>
+                                  </div>
+                                  <div
+                                    class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+                                    <div id="divMain">
+                                      <div id='left-div' class="resume-content">
+                                        <img style='float:left; margin:0 20px;' width='200px;' class='img-fluid'
+                                          src='images/linkedin.png'>
+                                      </div>
+                                      <div id='right-div' class='resume-content'>
+                                        <div class="subheading mb-0">
+                                          <p>This Workshop was conducted by Boeing Airlines(CHINA) with the help of IITK. We were taught the basics of Aircraft-Modelling and were provided with components and Mentors. The main part of the Aircraft was its design and its Thrust force. We finally designed a Aircraft and made it fly with the help of transmitter attach to the plane. We used Servo motors for the wings movement. And finally On the Runway at IITK we performed a successfull flight of the AirCraft  </p>
+                                        </div>
+                                        <div class="mb-0">
+                                          <span class='badge badge-secondary'>Design</span>
+                                          <span class='badge badge-secondary'>Servo</span>
+                                          <span class='badge badge-secondary'>Transmitter</span>
+                                          <span class='badge badge-primary'>Receiver</span>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </a>
+                              </div>
+                            </li>
+                           
                             <!-- </article>
                               <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
-                            <li>
                               <i class="fa-li fa fa-check"></i>
                               <div
                                 onmouseover="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(3) > div > a > div:nth-child(1)').style.backgroundColor='#78C2AD'"
