--- a/cp.html
+++ b/cp.html
@@ -58,6 +58,7 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://www.codechef.com/users/sanket_wable">
+                                    <img src = 'images/codechef.png ' width = 30px>
                                     <p style="color:firebrick">Codechef</p>
                                  </a>
                               </strong>
@@ -68,8 +69,10 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://codeforces.com/profile/WableSanket">
+                                    <img src = 'images/codeforces.png ' width = 30px>
                                     <p style="color:deeppink">Codeforces</p>
                                  </a>
+                                 <br>
                               </strong>
                            </div>
                         </div>
@@ -78,6 +81,7 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://auth.geeksforgeeks.org/user/sanketwable/profile">
+                                    <img src = 'images/geeksforgeeks.png ' width = 30px>
                                     <p style="color:darkgreen">Geekforgeeks</p>
                                  </a>
                               </strong>
@@ -88,6 +92,7 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://www.hackerearth.com/@sanket389">
+                                    <img src = 'images/hackerearth.png ' width = 30px>
                                     <p style="color:dimgrey">HackerEarth</p>
                                  </a>
                               </strong>
@@ -98,6 +103,7 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://www.hackerrank.com/sanketwable123">
+                                    <img src = 'images/hackerrank.png ' width = 30px>
                                     <p style="color:forestgreen">HackerRank</p>
                                  </a>
                               </strong>
@@ -107,6 +113,7 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://github.com/Sanketwable">
+                                    <img src = 'images/github.svg ' width = 30px>
                                     <p style="color:black">GitHub</p>
                                  </a>
                               </strong>
@@ -131,6 +138,7 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://www.linkedin.com/in/sanket-wable-3a10b3172/">
+                                    <img src = 'images/linkedin.png ' width = 40px>
                                     <p style="color:dodgerblue">Linkedin</p>
                                  </a>
                               </strong>
@@ -140,6 +148,7 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://www.quora.com/profile/Sanket-Wable">
+                                    <img src = 'images/quora.png ' width = 40px>
                                     <p style="color:darkred">Quora</p>
                                  </a>
                               </strong>
@@ -149,6 +158,7 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://www.facebook.com/sanketwable12/">
+                                    <img src = 'images/facebook.png ' width = 40px>
                                     <p style="color:rgb(2, 37, 26)">Facebook</p>
                                  </a>
                               </strong>
@@ -158,6 +168,7 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://www.instagram.com/">
+                                    <img src = 'images/instagram.png ' width = 40px>
                                     <p style="color:darkorange">Instagram</p>
                                  </a>
                               </strong>
@@ -167,21 +178,14 @@
                            <div class="progress-wrap">
                               <strong>
                                  <a href="https://twitter.com/CoderSanket">
+                                    <img src = 'images/twitter.png ' width = 40px>
                                     <p style="color:dodgerblue">Twitter</p>
                                  </a>
                               </strong>
                            </div>
                         </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://skype.com/live:sanketwable123">
-                                    <p style="color:rgb(255, 30, 236)">Skype</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                        
+         <!--               <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
                                     <br>
@@ -200,7 +204,7 @@
                   </div>
                </strong>
                   </section>
-            </div>
+            </div> -->
             <!-- end:colorlib-main -->
          </div>
          
