--- a/index.html
+++ b/index.html
@@ -260,6 +260,17 @@
                               </div>
                            </div>
                         </div>
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">Bash</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-1" role="progressbar" aria-valuenow="50"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:50%">
+                                    <span>50%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
                      </div>
                       </div>
                </section>
@@ -326,6 +337,19 @@
                                     </div>
                                  </div>
                               </article>
+                              <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+                                 <div class="timeline-entry-inner">
+                                    <div class="timeline-icon color-1">
+                                       <i class="fa fa-code"></i>
+                                    </div>
+                                    <div class="timeline-label">
+                                       <h2><a href="#">Campus Connect at Shiksha.com </a> <span>July 2019 - Present</span></h2>
+                                       <p><strong><a href="https://www.facebook.com/groups/322598094760702/">Campus Representative</a></strong><br>Make student across the country aware of the college campus, <br>also other facilities and campus placements and <br>answer their questions</p>
+                                       <p></p>
+                                    </div>
+                                 </div>
+                              </article>
+                             
                               <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-none">
@@ -347,7 +371,25 @@
                                <h1>Contact</h1>
                               <hr>
                                </div>
-                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: sanketwable123@gmail.com">sanketwable123@gmail.com</a></strong></p>
+                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: sanketwable123@gmail.com">sanketwable123@gmail.com</a>
+                              </strong></p>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+               <section class="colorlib-contact" data-section="contact">
+                  <div class="colorlib-narrow-content">
+                     <div class="row">
+                        <div class="col-md-12">
+                           <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+                              <div class="about-desc">
+                               <h3>Address</h3>
+                              <hr>
+                               </div>
+                              <p>Room no: 425, Himadri Hostel,  NIT Hamirpur,  Hamipur, Himachal Pradesh, 177005.
+                              </strong></p>
+                              <p>Mob: +91 9521205830</p>
                            </div>
                         </div>
                      </div>
