--- a/webdev.html
+++ b/webdev.html
@@ -115,7 +115,7 @@
                               <div
                                 onmouseover="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(1) > div > a > div:nth-child(1)').style.backgroundColor='#78C2AD'"
                                 onmouseout="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(1) > div > a > div:nth-child(1)').style.backgroundColor=''">
-                                <a href="https://github.com/Sanketwable/ELEC_20_NERO" style="text-decoration:none;">
+                                <a href="https://techkriti.org/competitions/robogames/iarc?showEvent=2" style="text-decoration:none;">
                                   <div>
                                     <h4 class="mb-3">IARC - Techkriti(IITK)</h4>
                                   </div>
@@ -124,7 +124,7 @@
                                     <div id="divMain">
                                       <div id='left-div' class="resume-content">
                                         <img style='float:left; margin:0 20px;' width='200px;' class='img-fluid'
-                                          src='images/facebook.png'>
+                                          src='images/iarc.jpg'>
                                       </div>
                                       <div id='right-div' class='resume-content'>
                                         <div class="subheading mb-0">
@@ -151,7 +151,7 @@
                               <div
                                 onmouseover="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(1) > div > a > div:nth-child(1)').style.backgroundColor='#78C2AD'"
                                 onmouseout="document.querySelector('#colorlib-main > section.colorlib-skills > div > div > div:nth-child(3) > article > ul > li:nth-child(1) > div > a > div:nth-child(1)').style.backgroundColor=''">
-                                <a href="https://github.com/Sanketwable/ELEC_20_NERO" style="text-decoration:none;">
+                                <a href="http://www.iitk.ac.in/dord/boeing/beia/Workshop.html" style="text-decoration:none;">
                                   <div>
                                     <h4 class="mb-3">AirCraft - Aeroboeing workshop(IITK)</h4>
                                   </div>
@@ -160,7 +160,7 @@
                                     <div id="divMain">
                                       <div id='left-div' class="resume-content">
                                         <img style='float:left; margin:0 20px;' width='200px;' class='img-fluid'
-                                          src='images/linkedin.png'>
+                                          src='images/aero.jpg'>
                                       </div>
                                       <div id='right-div' class='resume-content'>
                                         <div class="subheading mb-0">
