--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                                  <div class="hire">
                                     <h2>I want to make things
                                        that make a difference.</h2>
-                                       <a href="https://drive.google.com/file/d/1xtTk5pl9APkr6UQjJaHi5U5X6RnaGpdW/view?usp=sharing" class="btn-hire" style="text-align: center;">Download Resume</a>
+                                       <a href="https://drive.goog
+e.com/file/d/1xtTk5pl9APkr6UQjJaHi5U5X6RnaGpdW/view?usp=sharing" class="btn-hire" style="text-align: center;">Download Resume</a>
                                  </div>
                               </div>
                            </div>
