--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
    <head>
+      <script src="https://www.w3counter.com/tracker.js?id=131171"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162127809-1"></script>
 <script>
