--- a/webdev.html
+++ b/webdev.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+  <script src="https://www.w3counter.com/tracker.js?id=131171"></script>
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162127809-1"></script>
