--- a/cp.html
+++ b/cp.html
@@ -50,6 +50,8 @@
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
                   <h1 id="colorlib-logo"><a href="https://sanketwable.github.io/Portfolio/">Wable Sanket</a></h1>
                   <p><strong>Competitive Programmer</strong></p>
+                  <p>Visits to My Portfolio</p>
+                  <script src="https://www.w3counter.com/tracker.js?id=131171"></script>
                </div>
             </aside>
             <!----- main page--------->
