--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
    <head>
-      <script src="https://www.w3counter.com/tracker.js?id=131171"></script>
+      
       <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162127809-1"></script>
 <script>
@@ -425,6 +425,8 @@ e.com/file/d/1xtTk5pl9APkr6UQjJaHi5U5X6RnaGpdW/view?usp=sharing" class="btn-hire
                                        <a href="https://github.com/Sanketwable" style="color: black;" class="fa fa-github"></a>
                                     </p>
                                  </div>
+                                 <p style="text-align: center; margin-bottom: -20px;"><script src="https://www.w3counter.com/tracker.js?id=131171"></script>  &nbsp&nbspVisits to My Portfolio</p>
+                                 <br>
                                  <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights, feel free to use this template.</strong></p>
                               </div>
                            </div>
