--- a/webdev.html
+++ b/webdev.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-  <script src="https://www.w3counter.com/tracker.js?id=131171"></script>
+ 
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162127809-1"></script>
@@ -64,6 +64,8 @@
             <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
             <h1 id="colorlib-logo"><a href="https://sanketwable.github.io/Portfolio/">Wable Sanket</a></h1>
             <p><strong>Robotics Projects</strong></p>
+            <p>Visits to My Portfolio</p>
+            <script src="https://www.w3counter.com/tracker.js?id=131171"></script>
           </div>
         </aside>
         <div id="colorlib-main">
