--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <title>Wable Sanket - Portfolio</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="Portfolio webpage of Wable Sanket" />
-      <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
+      <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering, sanketwable" />
       <meta name="author" content="Wable Sanket" />
       <!--Social Media icons--> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -49,15 +49,55 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
+                  <div class="nnp">
+                  <style>
+                     .nnp:hover {
+                       transform: scale(1.12);
+                       transition: transform 0.1s;
+                     }
+                     </style>
                   <h1 id="colorlib-logo"><a href="https://sanketwable.github.io/Portfolio/">Wable Sanket</a></h1>
+                  </div>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
                   <div id="navbar" class="collapse">
                      <ul>
+                        <div class="nnp">
+                           <style>
+                              .nnp:hover {
+                                transform: scale(1.12);
+                                transition: transform 0.1s;
+                              }
+                              </style>
                         <li><a href="#" data-nav-section="about">About</a></li>
+                        </div>
+                        <div class="nnp">
+                           <style>
+                              .nnp:hover {
+                                transform: scale(1.12);
+                                transition: transform 0.1s;
+                              }
+                              </style>
                         <li><a href="#" data-nav-section="skills">Skills</a></li>
+                        </div>
+                        <div class="nnp">
+                           <style>
+                              .nnp:hover {
+                                transform: scale(1.12);
+                                transition: transform 0.1s;
+                              }
+                              </style>
                         <li><a href="#" data-nav-section="experience">Work Experience</a></li>
+                        </div>
+                        <div class="nnp">
+                           <style>
+                              .nnp:hover {
+                                transform: scale(1.12);
+                                transition: transform 0.1s;
+                              }
+                              </style>
                         <li><a href="#" data-nav-section="contact">Contact</a></li>
+                        </div>
                      </ul>
                   </div>
                </nav>
@@ -104,44 +144,86 @@
                               </div>
                            </div>
                            <div class="row">
+                              
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="cp.html" target="_self">
-                                    <div class="services color-5">
-                                       <span class="icon2"><i class="fa fa-desktop"></i></span>
-                                       <h3>Programming<br> Profile (CP)</h3>
-                                    </div>
+                                 <div class="nn">
+                                    <style>
+                                       .nn:hover {
+                                         transform: scale(1.2);
+                                         transition: transform 0.8s;
+                                       }
+                                       </style>
+                                    <a href="cp.html" target="_self">
+                                       <div class="services color-5">
+                                          <span class="icon2"><i class="fa fa-desktop"></i></span>
+                                          <h3>Programming<br> Profile (CP)</h3>
+                                       </div>
+                                 </div>
+                                 
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                                 <div class="nm">
+                                    <style>
+                                       .nm:hover {
+                                         transform: scale(1.2);
+                                         transition: transform 0.8s; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+                                       }
+                                       </style>
                                  <a href="webdev.html" target="_self" >
                                     <div class="services color-2">
                                        <span class="icon2"><i class="fa fa-code"></i></span>
                                        <h3>Robotics<br> Projects</h3>
                                     </div>
+                                 </div>
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                                 <div class="nnn">
+                                    <style>
+                                       .nnn:hover {
+                                         transform: scale(1.2);
+                                         transition: transform 0.8s; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+                                       }
+                                       </style>
                                  <a href="software.html" target="_self" >
                                     <div class="services color-3">
                                        <span class="icon2"><i class="fa fa-terminal"></i></span>
                                        <h3>Software Development</h3>
                                     </div>
+                                 </div>
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                                 <div class="nnm">
+                                    <style>
+                                       .nnm:hover {
+                                         transform: scale(1.2);
+                                         transition: transform 0.8s; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+                                       }
+                                       </style>
                                  <a href="android.html" target="_self">
                                     <div class="services color-4">
                                        <span class="icon2"><i class="fa fa-android"></i></span>
                                        <h3>Ethical <br>Hacking</h3>
                                     </div>
+                                 </div>
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                                 <div class="nnaa">
+                                    <style>
+                                       .nnaa:hover {
+                                         transform: scale(1.2);
+                                         transition: transform 0.8s; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+                                       }
+                                       </style>
                                  <a href="ml.html" target="_self">
                                     <div class="services color-1">
                                        <span class="icon2"><i class="fa fa-user"></i></span>
                                        <h3>Web Development</h3>
                                     </div>
+                                 </div>
                                  </a>
                               </div>
                            </div>
@@ -150,8 +232,14 @@
                                  <div class="hire">
                                     <h2>I want to make things
                                        that make a difference.</h2>
-                                       <a href="https://drive.goog
-e.com/file/d/1xtTk5pl9APkr6UQjJaHi5U5X6RnaGpdW/view?usp=sharing" class="btn-hire" style="text-align: center;">Download Resume</a>
+                                       <div class="nnaaa">
+                                          <style>
+                                             .nnaaa:hover {
+                                               transform: scale(1.02); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+                                             }
+                                             </style>
+                                       <a href="https://drive.google.com/file/d/1xtTk5pl9APkr6UQjJaHi5U5X6RnaGpdW/view?usp=sharing" class="btn-hire" style="text-align: center;">Download Resume</a>
+                                       </div>
                                  </div>
                               </div>
                            </div>
