--- a/cp.html
+++ b/cp.html
@@ -48,10 +48,28 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
+                  <div class="nnp">
+                     <style>
+                        .nnp:hover {
+                          transform: scale(1.12);
+                          transition: transform 0.1s;
+                        }
+                        </style>
                   <h1 id="colorlib-logo"><a href="https://sanketwable.github.io/Portfolio/">Wable Sanket</a></h1>
+                  </div>
+                  
                   <p><strong>Competitive Programmer</strong></p>
                   <p>Visits to My Portfolio</p>
                   <script src="https://www.w3counter.com/tracker.js?id=131171"></script>
+                  <div class="nnp">
+                     <style>
+                        .nnp:hover {
+                          transform: scale(1.12);
+                          transition: transform 0.1s;
+                        }
+                        </style>
+                  <p><a href="https://sanketwable.github.io/Portfolio/">Home</a></p>
+                  </div>
                </div>
             </aside>
             <!----- main page--------->
@@ -70,10 +88,18 @@
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
                               <strong>
+                                 <div class="nnp">
+                                    <style>
+                                       .nnp:hover {
+                                         transform: scale(1.04);
+                                         transition: transform 0.5s; 
+                                       }
+                                       </style>
                                  <a href="https://www.codechef.com/users/sanket_wable">
                                     <img src = 'images/codechef.png ' width = 30px>
                                     <p style="color:firebrick">Codechef</p>
                                  </a>
+                                 </div>
                               </strong>
                            </div>
                         </div>
@@ -81,11 +107,13 @@
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
+                                 <div class="nnp">
                                  <a href="https://codeforces.com/profile/WableSanket">
                                     <img src = 'images/codeforces.png ' width = 30px>
                                     <p style="color:deeppink">Codeforces</p>
                                  </a>
                                  <br>
+                              </div>
                               </strong>
                            </div>
                         </div>
@@ -93,10 +121,12 @@
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
                               <strong>
+                                 <div class="nnp">
                                  <a href="https://auth.geeksforgeeks.org/user/sanketwable/profile">
                                     <img src = 'images/geeksforgeeks.png ' width = 30px>
                                     <p style="color:darkgreen">Geekforgeeks</p>
                                  </a>
+                              </div>
                               </strong>
                            </div>
                         </div>
@@ -104,10 +134,12 @@
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
+                                 <div class="nnp">
                                  <a href="https://www.hackerearth.com/@sanket389">
                                     <img src = 'images/hackerearth.png ' width = 30px>
                                     <p style="color:dimgrey">HackerEarth</p>
                                  </a>
+                              </div>
                               </strong>
                            </div>
                         </div>
@@ -115,20 +147,24 @@
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
                               <strong>
+                                 <div class="nnp">
                                  <a href="https://www.hackerrank.com/sanketwable123">
                                     <img src = 'images/hackerrank.png ' width = 30px>
                                     <p style="color:forestgreen">HackerRank</p>
                                  </a>
+                              </div>
                               </strong>
                            </div>
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
+                                 <div class="nnp">
                                  <a href="https://github.com/Sanketwable">
                                     <img src = 'images/github.svg ' width = 30px>
                                     <p style="color:black">GitHub</p>
                                  </a>
+                              </div>
                               </strong>
                            </div>
                         </div>
@@ -150,50 +186,60 @@
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
+                                 <div class="nnp">
                                  <a href="https://www.linkedin.com/in/sanket-wable-3a10b3172/">
                                     <img src = 'images/linkedin.png ' width = 40px>
                                     <p style="color:dodgerblue">Linkedin</p>
                                  </a>
+                                 </div>
                               </strong>
                            </div>
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
                               <strong>
+                                 <div class="nnp">
                                  <a href="https://www.quora.com/profile/Sanket-Wable">
                                     <img src = 'images/quora.png ' width = 40px>
                                     <p style="color:darkred">Quora</p>
                                  </a>
+                                 </div>
                               </strong>
                            </div>
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
+                                 <div class="nnp">
                                  <a href="https://www.facebook.com/sanketwable12/">
                                     <img src = 'images/facebook.png ' width = 40px>
                                     <p style="color:rgb(2, 37, 26)">Facebook</p>
                                  </a>
+                                 </div>
                               </strong>
                            </div>
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
                               <strong>
+                                 <div class="nnp">
                                  <a href="https://www.instagram.com/">
                                     <img src = 'images/instagram.png ' width = 40px>
                                     <p style="color:darkorange">Instagram</p>
                                  </a>
+                                 </div>
                               </strong>
                            </div>
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
+                                 <div class="nnp">
                                  <a href="https://twitter.com/CoderSanket">
                                     <img src = 'images/twitter.png ' width = 40px>
                                     <p style="color:dodgerblue">Twitter</p>
                                  </a>
+                                 </div>
                               </strong>
                            </div>
                         </div>
