--- a/index.html
+++ b/index.html
@@ -450,6 +450,19 @@
                      <div class="row">
                         <div class="col-md-12">
                            <div class="timeline-centered">
+                              
+                              <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                                 <div class="timeline-entry-inner">
+                                    <div class="timeline-icon color-4">
+                                       <i class="fa fa-user"></i>
+                                    </div>
+                                    <div class="timeline-label">
+                                       <h2><a href="#" style="color: #51ff00;">Intern at Advangelists/</a> <span style="color: bisque;">July 2019 - Present</span></h2>
+                                       <p><strong><a href="https://www.advangelists.com/" >Backend Developer</a></strong><br> <span style="color: aliceblue;">To engage in outreach to students at the campus about GeeksforGeeks’s study content, courses, opportunities, and to support all campus workshops by GeeksforGeeks.</span></p>
+                                       <p></p>
+                                    </div>
+                                 </div>
+                              </article>
 
                               <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
                                  <div class="timeline-entry-inner">
@@ -457,7 +470,7 @@
                                        <i class="fa fa-user"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="#" style="color: #51ff00;">GeeksforGeeks</a> <span style="color: bisque;">July 2019 - Present</span></h2>
+                                       <h2><a href="#" style="color: #51ff00;">GeeksforGeeks</a> <span style="color: bisque;">July 2019 - July 2020</span></h2>
                                        <p><strong><a href="https://auth.geeksforgeeks.org/user/sanketwable/profile" >Campus Ambassador</a></strong><br> <span style="color: aliceblue;">To engage in outreach to students at the campus about GeeksforGeeks’s study content, courses, opportunities, and to support all campus workshops by GeeksforGeeks.</span></p>
                                        <p></p>
                                     </div>
