--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@
                                        <i class="fa fa-user"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="#" style="color: #51ff00;">Intern at Advangelists/</a> <span style="color: bisque;">July 2019 - Present</span></h2>
-                                       <p><strong><a href="https://www.advangelists.com/" >Backend Developer</a></strong><br> <span style="color: aliceblue;">To engage in outreach to students at the campus about GeeksforGeeks’s study content, courses, opportunities, and to support all campus workshops by GeeksforGeeks.</span></p>
+                                       <h2><a href="#" style="color: #51ff00;">Intern at Advangelists</a> <span style="color: bisque;">July 2019 - Present</span></h2>
+                                       <p><strong><a href="https://www.advangelists.com/" >Backend Developer</a></strong><br> <span style="color: aliceblue;">Working on the Backend for the Native App. Building RestAPIs in golang and using mysql db using gorm. And hosting on AWS server.</span></p>
                                        <p></p>
                                     </div>
                                  </div>
