--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                                     </div>
                                     <div class="timeline-label">
                                        <h2><a href="#">CSEC</a> <span style="color: bisque;">February 2019 - Present </span></h2>
-                                       <p><strong><a href="https://csec.com"><b>Computer Science and Engineering Community</b></a></strong><br><span style="color: aliceblue;">Scociety handles all the contests and events related to the CSE <br>Contributed to arranging workshops and arranging contests and Hackthon.</span></p>
+                                       <p><strong><a href="https://csec.com"><b>Computer Science and Engineering Community</b></a></strong><br><span style="color: aliceblue;">Society handles all the contests and events related to the CSE <br>Contributed to arranging workshops and arranging contests and Hackthon.</span></p>
                                     </div>
                                  </div>
                               </article>
