--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                        </a> &nbspand&nbsp <a href="https://www.codechef.com/users/sanket_wable">
                                           <img src = 'images/codeforces.png ' width = 20px>
                                           <span style="color:rgb(255, 255, 255)">Codeforces</span>
-                                       </a>.  I love to develope tool which make things easier. I can also verify various attack as a Ethical Hacker . I use Golang as my Preferred language.
+                                       </a>.  I love to develop tool which make things easier. I can also verify various attack as a Ethical Hacker. I use Golang as my Preferred language.
                                        </i>
                                     </span>
                                     </span>
